--- a/roles/utility/tasks/git_repository.yml
+++ b/roles/utility/tasks/git_repository.yml
@@ -2,19 +2,21 @@
 - name: git repository | collect stat
   stat:
     path: '{{ item.dest }}'
-  register: dir
-  with_items: '{{ utility_git_repository_list }}'
+  register: stat_result
+  loop: '{{ q("flattened", utility_git_repository_list) }}'
 
 - name: git repository | remove existing directory
   file:
     path: '{{ item.item.dest }}'
     force: yes
     state: absent
-  when: item.stat.exists and item.stat.isdir
-  with_items: '{{ dir.results }}'
+  when:
+    - item.stat.exists
+    - item.stat.isdir
+  loop: '{{ stat_result.results }}'
 
 - name: git repository | add repository
   git:
     repo: '{{ item.repo }}'
     dest: '{{ item.dest }}'
-  with_items: '{{ utility_git_repository_list }}'
+  loop: '{{ q("flattened", utility_git_repository_list) }}'
