--- a/roles/mega/tasks/main.yml
+++ b/roles/mega/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: create the directory
-  file:
+- name: create directory
+  include_tasks: '{{ helper_directory }}'
+  vars:
     path: '{{ mega.dest }}'
-    state: directory
