--- a/roles/utility/tasks/startup.yml
+++ b/roles/utility/tasks/startup.yml
@@ -1,27 +1,11 @@
 ---
-- name: startup | collect stat
-  stat:
-    path: '{{ startup_dest }}'
-  register: result
-
-- name: startup | recreate directory
-  block:
-    - file:
-        path: '{{ startup_dest }}'
-        state: absent
-    - file:
-        path: '{{ startup_dest }}'
-        state: directory
-  when: result.stat.isdir is defined
-
-- name: startup | create directory
-  file:
-    path: '{{ startup_dest }}'
-    state: directory
-  when: result.stat.isdir is not defined
+- name: create directory
+  include_tasks: '{{ helper_directory }}'
+  vars:
+    path: '{{ startup.dest }}'
 
 - name: startup | create template file
   template:
     src: 'startup.j2'
-    dest: '{{ startup_dest }}/{{ item.name }}.desktop'
+    dest: '{{ startup.dest }}/{{ item.name }}.desktop'
   loop: '{{ q("flattened", utility_startup_list) }}'
