move the utility tasks to a separate block

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 
 inventory = ./hosts.yml
-stdout_callback = debug
 log_path = ~/Desktop/ansible.log
 nocows = 1
+roles_path = ./service
+stdout_callback = debug
