--- a/hosts.yml
+++ b/hosts.yml
@@ -4,9 +4,10 @@ local:
   vars:
     ansible_connection: local
     ansible_python_interpreter: '{{ ansible_playbook_python }}'
-    helper_path: '{{ dotfiles_roles }}/helper'
+    helper_path: '{{ service_roles }}/helper'
     user_home: '{{ lookup("env","HOME") }}'
     user_config: '{{ user_home }}/.config'
     dotfiles_directory: '{{ user_home }}/dotfiles'
     dotfiles_roles: '{{ dotfiles_directory }}/roles'
+    service_roles: '{{ dotfiles_directory }}/service'
     git_protocol: 'git@github.com:in-in/dotfiles.git'
