vscode: add todo plugin & update zsh task

--- a/roles/code/defaults/main.yml
+++ b/roles/code/defaults/main.yml
@@ -34,3 +34,4 @@ vscode_extensions:
   - 'ms-python.python'
   - 'rupisaini.vscode-ansible-linter'
   - 'vscoss.vscode-ansible'
+  - 'wayou.vscode-todo-highlight'
