--- a/service/utility/tasks/key.yml
+++ b/service/utility/tasks/key.yml
@@ -3,4 +3,8 @@
   become: yes
   apt_key:
     url: '{{ item }}'
+  register: apt_key_result
+  until: apt_key_result.failed == False
+  retries: 3
+  delay: 10
   loop: '{{ q("flattened", utility_key_list) }}'
