--- a/service/utility/tasks/package.yml
+++ b/service/utility/tasks/package.yml
@@ -6,6 +6,10 @@
     force_apt_get: yes
     name: '{{ item.apt.install }}'
     state: latest
+  register: apt_install_result
+  until: apt_install_result.failed == False
+  retries: 3
+  delay: 10
   when:
     - item.apt is defined
     - item.apt.install is defined
@@ -33,6 +37,10 @@
       }}
     extra_args: '--user --upgrade'
     state: latest
+  register: pip_install_result
+  until: pip_install_result.failed == False
+  retries: 3
+  delay: 10
   when:
     - item.pip is defined
     - item.pip.install is defined
