--- a/service/utility/tasks/copy.yml
+++ b/service/utility/tasks/copy.yml
@@ -1,10 +1,9 @@
 ---
 - name: copy | collect stat
-  stat:
-    path: '{{ item.dir }}'
-  register: stat_result
-  when: item.dir is defined
-  loop: '{{ utility_copy_list }}'
+  include_tasks: '{{ helper_stat }}'
+  vars:
+    path: '{{ item.dir | default(None) }}'
+    object: '{{ utility_copy_list }}'
 
 - name: copy | remove existing directory
   file:
@@ -14,7 +13,7 @@
     - item is not skipped
     - item.stat.exists
     - item.stat.isdir is defined
-  loop: '{{ stat_result.results }}'
+  loop: '{{ helper_stat_result.results }}'
 
 - name: copy | with privilege
   become: yes
