--- a/service/utility/tasks/copy.yml
+++ b/service/utility/tasks/copy.yml
@@ -6,14 +6,10 @@
     object: '{{ utility_copy_list }}'
 
 - name: copy | remove existing directory
-  file:
+  include_tasks: '{{ helper_dir_remove }}'
+  vars:
     path: '{{ item.stat.path }}'
-    state: absent
-  when:
-    - item is not skipped
-    - item.stat.exists
-    - item.stat.isdir is defined
-  loop: '{{ helper_stat_result.results }}'
+    object: '{{ helper_stat_result.results }}'
 
 - name: copy | with privilege
   become: yes
