--- a/service/utility/tasks/git_repository.yml
+++ b/service/utility/tasks/git_repository.yml
@@ -6,13 +6,10 @@
     object: '{{ q("flattened", utility_git_repository_list) }}'
 
 - name: git repository | remove existing directory
-  file:
+  include_tasks: '{{ helper_dir_remove }}'
+  vars:
     path: '{{ item.item.dest }}'
-    state: absent
-  when:
-    - item.stat.exists
-    - item.stat.isdir
-  loop: '{{ helper_stat_result.results }}'
+    object: '{{ helper_stat_result.results }}'
 
 - name: git repository | add repository
   git:
