--- a/roles/keepassxc/tasks/main.yml
+++ b/roles/keepassxc/tasks/main.yml
@@ -1,8 +1,13 @@
 ---
-- name: create directory
-  include_tasks: '{{ helper_directory }}'
-  vars:
-    path: '{{ keepassxc.dest }}'
+- name: recreate directory
+  block:
+    - include_tasks: '{{ helper_dir_remove }}'
+      vars:
+        path: '{{ keepassxc.dest }}'
+
+    - include_tasks: '{{ helper_dir_create }}'
+      vars:
+        path: '{{ keepassxc.dest }}'
 
 - name: create config
   template:
