--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,7 @@ roles/emacs/files/emacs.d/*
 !roles/emacs/files/emacs.d/custom/*
 !roles/emacs/files/emacs.d/init.el
 #
+roles/mpv/files/mpv/watch_later/
+#
 roles/sublime/files/sublime-text-3/*
 !roles/sublime/files/sublime-text-3/Packages/User/Preferences.sublime-settings
