--- a/roles/disable_update/defaults/main.yml
+++ b/roles/disable_update/defaults/main.yml
@@ -3,8 +3,8 @@ utility_copy:
   privilege: true
   paths:
     - src: '{{ dotfiles_roles }}/disable_update/files/10periodic'
-      dest: '/etc/apt/apt.conf.d/10periodic'
+      dest: '/etc/apt/apt.conf.d/'
     - src: '{{ dotfiles_roles }}/disable_update/files/20auto-upgrades'
-      dest: '/etc/apt/apt.conf.d/20auto-upgrades'
+      dest: '/etc/apt/apt.conf.d/'
     - src: '{{ dotfiles_roles }}/disable_update/files/release-upgrades'
-      dest: '/etc/update-manager/release-upgrades'
+      dest: '/etc/update-manager/'
