return mpv & add youtube-dl & update package task

--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -4,7 +4,7 @@ utility_package:
     install:
       - curl
       - dconf-editor
-      - fonts-hack-ttf
+      - fonts-hack
       - gnome-shell-extension-dash-to-panel
       - gnome-tweaks
       - synaptic
