--- a/roles/mpv/defaults/main.yml
+++ b/roles/mpv/defaults/main.yml
@@ -1,12 +1,12 @@
 ---
-# TODO: Still do not know how to get the latest version without Python2
 # https://mpv.io/manual/stable/
 
-# utility_repository:
-#   - repo: 'ppa:mc3man/mpv-tests'
+utility_repository:
+  - repo: 'ppa:mc3man/mpv-tests'
 
 utility_package:
   apt:
+    install_recommends: no
     install:
       - 'mpv'
 
