update copyq, youtube-dl settings

--- a/roles/copyq/files/copyq/copyq.conf
+++ b/roles/copyq/files/copyq/copyq.conf
@@ -2,26 +2,35 @@
 plugin_priority=itemtext, itemnotes, itempinned, itemimage, itemencrypted, itemfakevim, itemsync, itemtags, itemdata
 
 [Commands]
-1\Icon=\xf016
-1\Name=New command
-2\Command=copyq: toggle()
-2\GlobalShortcut=ctrl+shift+1
-2\Icon=\xf022
-2\Name=Show/hide main window
-3\Command=copyq: plugins.itempinned.pinData()
-3\Icon=\xf08d
-3\InMenu=true
-3\Input=!OUTPUT
-3\Name=Pin
-3\Output=application/x-copyq-item
-3\Shortcut=ctrl+shift+p
-4\Command=copyq: plugins.itempinned.unpinData()
-4\Icon=\xf08d
-4\InMenu=true
-4\Input=application/x-copyq-item-pinned
-4\Name=Unpin
-4\Shortcut=ctrl+shift+p
-size=4
+1\Automatic=true
+1\Command="copyq:\nvar window = str(data('application/x-copyq-owner-window-title'))\nvar tagsMime = 'application/x-copyq-tags'\nif (window.length >= 50) window = window.substring(0,50) + \"\x2026\"\nvar tags = str(data(tagsMime)) + ', ' + window\nsetData(tagsMime, tags)\n"
+1\Icon=\xf009
+1\Name=Store Window Title
+2\Automatic=true
+2\Command="copyq:\nvar time = dateString('dd.MM.yy')\nsetData('application/x-copyq-user-copy-time', time)\nvar tagsMime = 'application/x-copyq-tags'\nvar tags = str(data(tagsMime)) + ', ' + time\nsetData(tagsMime, tags)"
+2\Icon=\xf017
+2\Name=Store Copy Time
+3\Icon=\xf15b
+3\Name=New command
+4\Command=copyq: toggle()
+4\GlobalShortcut=ctrl+shift+1
+4\Icon=\xf022
+4\IsGlobalShortcut=true
+4\Name=Show/hide main window
+5\Command=copyq: plugins.itempinned.pinData()
+5\Icon=\xf08d
+5\InMenu=true
+5\Input=!OUTPUT
+5\Name=Pin
+5\Output=application/x-copyq-item
+5\Shortcut=ctrl+shift+p
+6\Command=copyq: plugins.itempinned.unpinData()
+6\Icon=\xf08d
+6\InMenu=true
+6\Input=application/x-copyq-item-pinned
+6\Name=Unpin
+6\Shortcut=ctrl+shift+p
+size=6
 
 [Options]
 action_has_input=false
@@ -52,7 +61,7 @@ hide_toolbar=true
 hide_toolbar_labels=true
 item_popup_interval=0
 language=en
-maxitems=500
+maxitems=1000
 move=true
 notification_horizontal_offset=10
 notification_maximum_height=100
@@ -88,7 +97,7 @@ itemimage\image_editor=
 itemimage\max_image_height=240
 itemimage\max_image_width=320
 itemimage\svg_editor=
-itemnotes\enabled=true
+itemnotes\enabled=false
 itemnotes\icon_only=false
 itemnotes\notes_at_bottom=false
 itemnotes\show_tooltip=false
@@ -96,9 +105,9 @@ itempinned\enabled=true
 itemsync\enabled=false
 itemsync\format_settings=@Invalid()
 itemsync\sync_tabs=@Invalid()
-itemtags\enabled=false
+itemtags\enabled=true
 itemtags\tags=@Invalid()
-itemtext\enabled=true
+itemtext\enabled=false
 itemtext\max_height=0
 itemtext\max_lines=0
 itemtext\use_rich_text=false
@@ -193,4 +202,4 @@ tab_tree_sel_item_css="\n    ;color: ${fg + #222}\n    ;background: ${bg - #211}
 tool_bar_css="\n    ;color: ${fg}\n    ;background-color: ${bg}\n    ;border: 0"
 tool_button_css="\n    ;background-color: transparent"
 tool_button_selected_css="\n    ;background: ${sel_bg}\n    ;color: ${sel_fg}"
-use_system_icons=false
+use_system_icons=true
