add optimization task & update vscode

--- a/roles/code/defaults/main.yml
+++ b/roles/code/defaults/main.yml
@@ -27,6 +27,7 @@ utility_gitignore:
 
 vscode_extensions:
   - 'CoenraadS.bracket-pair-colorizer'
+  - 'dbankier.vscode-quick-select'
   - 'dracula-theme.theme-dracula'
   - 'EditorConfig.EditorConfig'
   - 'esbenp.prettier-vscode'
