rewrite imageresize script to python

--- a/roles/bin/defaults/main.yml
+++ b/roles/bin/defaults/main.yml
@@ -6,5 +6,8 @@ utility_link:
 utility_package:
   apt:
     install:
-      # - 'libvips-tools'
       - 'ffmpeg'
+      - 'libvips42'
+  pip:
+    install:
+      - name: 'pyvips'
