improve imageresize script & add roboto font & update doublecmd settings

--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -5,6 +5,7 @@ utility_package:
       - 'curl'
       - 'dconf-editor'
       - 'fonts-hack'
+      - 'fonts-roboto-hinted'
       - 'gnome-shell-extension-dash-to-panel'
       - 'gnome-tweaks'
       - 'synaptic'
@@ -15,6 +16,7 @@ utility_package:
       - 'gnome-software'
       - 'ubuntu-release-upgrader-core'
       - 'ubuntu-release-upgrader-gtk'
+      - 'ubuntu-report'
       - 'ubuntu-software'
       - 'update-manager-core'
       - 'update-manager'
