--- a/hosts.yml
+++ b/hosts.yml
@@ -10,4 +10,5 @@ local:
     dotfiles_directory: '{{ user_home }}/dotfiles'
     dotfiles_roles: '{{ dotfiles_directory }}/roles'
     service_roles: '{{ dotfiles_directory }}/service'
+    sync_directory: '{{ user_home }}/sync'
     git_protocol: 'git@github.com:in-in/dotfiles.git'
