--- a/roles/keepassxc/defaults/main.yml
+++ b/roles/keepassxc/defaults/main.yml
@@ -7,6 +7,10 @@ utility_package:
     install:
       - 'keepassxc'
 
-keepassxc:
-  base: 'psst.kdbx'
-  dest: '{{ user_config }}/keepassxc'
+utility_template:
+  - dest: '{{ user_config }}/keepassxc'
+    path: '{{ dotfiles_roles }}/keepassxc/templates'
+    filename: 'keepassxc.ini'
+    vars:
+      path: '{{ sync_directory }}'
+      filename: 'psst.kdbx'
