copyq: add new features & doublecmd: fix column sorting & keepassxc: turn on lock database idle

--- a/roles/copyq/files/copyq/copyq.conf
+++ b/roles/copyq/files/copyq/copyq.conf
@@ -2,35 +2,46 @@
 plugin_priority=itemtext, itemnotes, itempinned, itemimage, itemencrypted, itemfakevim, itemsync, itemtags, itemdata
 
 [Commands]
-1\Automatic=true
-1\Command="copyq:\nvar window = str(data('application/x-copyq-owner-window-title'))\nvar tagsMime = 'application/x-copyq-tags'\nif (window.length >= 50) window = window.substring(0,50) + \"\x2026\"\nvar tags = str(data(tagsMime)) + ', ' + window\nsetData(tagsMime, tags)\n"
-1\Icon=\xf009
-1\Name=Store Window Title
+1\Command="copyq:\nif (!copy())\n  abort()\n\nvar text = str(clipboard())\n\nvar newText = text.toUpperCase()\nif (text == newText)\n  newText = text.toLowerCase()\n\nif (text == newText)\n  abort();\n\ncopy(newText)\npaste()"
+1\GlobalShortcut=ctrl+shift+u
+1\Icon=\xf034
+1\IsGlobalShortcut=true
+1\Name=Toggle Upper/Lower Case
 2\Automatic=true
-2\Command="copyq:\nvar time = dateString('dd.MM.yy')\nsetData('application/x-copyq-user-copy-time', time)\nvar tagsMime = 'application/x-copyq-tags'\nvar tags = str(data(tagsMime)) + ', ' + time\nsetData(tagsMime, tags)"
-2\Icon=\xf017
-2\Name=Store Copy Time
-3\Icon=\xf15b
-3\Name=New command
-4\Command=copyq: toggle()
-4\GlobalShortcut=ctrl+shift+1
-4\Icon=\xf022
-4\IsGlobalShortcut=true
-4\Name=Show/hide main window
-5\Command=copyq: plugins.itempinned.pinData()
-5\Icon=\xf08d
-5\InMenu=true
-5\Input=!OUTPUT
-5\Name=Pin
-5\Output=application/x-copyq-item
-5\Shortcut=ctrl+shift+p
-6\Command=copyq: plugins.itempinned.unpinData()
-6\Icon=\xf08d
-6\InMenu=true
-6\Input=application/x-copyq-item-pinned
-6\Name=Unpin
-6\Shortcut=ctrl+shift+p
-size=6
+2\Command=copyq ignore
+2\Icon=\xf069
+2\Name=Ignore KeePass window
+2\Remove=true
+2\Window=KeePass
+3\Automatic=true
+3\Command="copyq:\nvar window = str(data('application/x-copyq-owner-window-title'))\nvar tagsMime = 'application/x-copyq-tags'\nif (window.length >= 50) window = window.substring(0,50) + \"\x2026\"\nvar tags = str(data(tagsMime)) + ', ' + window\nsetData(tagsMime, tags)\n"
+3\Icon=\xf009
+3\Name=Store Window Title
+4\Automatic=true
+4\Command="copyq:\nvar time = dateString('dd.MM.yy')\nsetData('application/x-copyq-user-copy-time', time)\nvar tagsMime = 'application/x-copyq-tags'\nvar tags = str(data(tagsMime)) + ', ' + time\nsetData(tagsMime, tags)"
+4\Icon=\xf017
+4\Name=Store Copy Time
+5\Icon=\xf15b
+5\Name=New command
+6\Command=copyq: toggle()
+6\GlobalShortcut=ctrl+shift+1
+6\Icon=\xf022
+6\IsGlobalShortcut=true
+6\Name=Show/hide main window
+7\Command=copyq: plugins.itempinned.pinData()
+7\Icon=\xf08d
+7\InMenu=true
+7\Input=!OUTPUT
+7\Name=Pin
+7\Output=application/x-copyq-item
+7\Shortcut=ctrl+shift+p
+8\Command=copyq: plugins.itempinned.unpinData()
+8\Icon=\xf08d
+8\InMenu=true
+8\Input=application/x-copyq-item-pinned
+8\Name=Unpin
+8\Shortcut=ctrl+shift+p
+size=8
 
 [Options]
 action_has_input=false
@@ -70,7 +81,7 @@ notification_position=3
 notification_vertical_offset=10
 open_windows_on_current_screen=true
 save_filter_history=false
-show_advanced_command_settings=false
+show_advanced_command_settings=true
 show_simple_items=false
 show_tab_item_count=true
 tab_tree=false
